[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Textures/Space.png" type="Texture" id=2]
[ext_resource path="res://Textures/ArrowRight.png" type="Texture" id=3]
[ext_resource path="res://Textures/ArrowUp.png" type="Texture" id=4]
[ext_resource path="res://Textures/ArrowDown.png" type="Texture" id=5]
[ext_resource path="res://Textures/ArrowLeft.png" type="Texture" id=6]
[ext_resource path="res://Scenes/HUD/Velocity.gd" type="Script" id=7]
[ext_resource path="res://Scenes/HUD/Keys.gd" type="Script" id=8]
[ext_resource path="res://Weapons/unarmed/unarmed.tscn" type="PackedScene" id=9]
[ext_resource path="res://Weapons/Armed/Rifle/rifle.tscn" type="PackedScene" id=10]
[ext_resource path="res://Weapons/Armed/Pistol/pistol.tscn" type="PackedScene" id=11]
[ext_resource path="res://Weapons/weapon_manager.gd" type="Script" id=12]
[ext_resource path="res://Scenes/HUD.gd" type="Script" id=13]
[ext_resource path="res://Weapon assets/Rifle/iconfinder_gun_military_weapon_military_2969374.png" type="Texture" id=14]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 1.8

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.465, 0.268, -0.275 )
fov = 85.0
far = 5000.0

[node name="Weapons" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.465, -0.268, 0.275 )
script = ExtResource( 12 )

[node name="Pistol" parent="Head/Camera/Weapons" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.222, -0.03, -0.974 )
weapon_image = ExtResource( 14 )
fire_rate = 1.4
reload_speed = 2.0

[node name="Rifle" parent="Head/Camera/Weapons" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.249, -0.471, -1.508 )
weapon_image = ExtResource( 14 )
fire_rate = 2.0
equip_speed = 1.5
unequip_speed = 1.5

[node name="Unarmed" parent="Head/Camera/Weapons" instance=ExtResource( 9 )]

[node name="RayCast" type="RayCast" parent="Head/Camera"]
cast_to = Vector3( 0, 0, -100 )

[node name="RightRay" type="RayCast" parent="Head"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.243852, -0.730081, 0 )
enabled = true

[node name="LeftRay" type="RayCast" parent="Head"]
transform = Transform( -0.0171034, 0.999854, 0, -0.999854, -0.0171034, 0, 0, 0, 1, 0, -0.738055, 0 )
enabled = true

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="ColorRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
rect_min_size = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Velocity" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 10.0
margin_bottom = 7.0
text = "100.0"
align = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Control" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = -130.0
margin_right = 180.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space" type="Sprite" parent="HUD/Keys"]
texture = ExtResource( 2 )

[node name="ArrowUp" type="Sprite" parent="HUD/Keys"]
position = Vector2( 0, -64 )
texture = ExtResource( 4 )

[node name="ArrowDown" type="Sprite" parent="HUD/Keys"]
position = Vector2( 0, 64 )
texture = ExtResource( 5 )

[node name="ArrowLeft" type="Sprite" parent="HUD/Keys"]
position = Vector2( -64, 0 )
texture = ExtResource( 6 )

[node name="ArrowRight" type="Sprite" parent="HUD/Keys"]
position = Vector2( 64, 0 )
texture = ExtResource( 3 )

[node name="WeaponUI" type="Label" parent="HUD"]
margin_left = 925.0
margin_top = 574.0
margin_right = 1180.0
margin_bottom = 713.0
text = "Pistol: 25/50"

[node name="WeaponSlot" type="Label" parent="HUD"]
margin_left = 879.666
margin_top = 576.341
margin_right = 989.67
margin_bottom = 644.341
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayUI" type="TextureRect" parent="HUD"]
margin_left = 913.746
margin_top = 485.99
margin_right = 999.746
margin_bottom = 592.99
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionPrompt" type="ColorRect" parent="HUD"]
margin_left = 630.0
margin_top = 350.0
margin_right = 650.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 10, 10 )
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="HUD/InteractionPrompt"]
margin_right = 20.0
margin_bottom = 20.0
text = "E"
align = 1
valign = 1

[node name="Description" type="Label" parent="HUD/InteractionPrompt"]
margin_left = 23.6934
margin_top = 0.333679
margin_right = 69.6934
margin_bottom = 20.3337
text = "Pick up"
align = 1
valign = 1
